--- a/styles/globals.css
+++ b/styles/globals.css
@@ -52,19 +52,6 @@ background-image: url("data:image/svg+xml,%3Csvg width='180' height='180' viewBo
 }
 
 
-a {
-  /* transition: all 0.3 ease-out; */
-}
-a:hover {
-  /* transform: translateY(-5px); */
-
-}
-
-.ReactModal__Content {
-  top: 10% !important;
-  left: 30% !important;
-  right: 30% !important;
-}
 
 .overlay {
   position: fixed;
@@ -89,4 +76,9 @@ a:hover {
 
 textarea {
   resize: none;
+}
+
+.react-pdf__Page__svg {
+  width: 100% !important;
+  height: auto !important;
 }
