--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,7 +15,7 @@ body {
 	box-sizing: border-box;
 }
 
-#top {
+#top, .top {
   animation: animate_background 40s linear 0s infinite;
   background-color: rgb(231, 229, 228);
   background-attachment: fixed;
@@ -31,24 +31,50 @@ background-image: url("data:image/svg+xml,%3Csvg width='180' height='180' viewBo
   } 
 }
 
-.arrow {
-  margin: auto;
-  position: relative;
-  z-index: 1;
-  top: 5rem;
-  box-sizing: border-box;
-  height: 36px;
-  width: 36px;
-  border-style: solid;
-  border-color: black;
-  border-width: 0px 1px 1px 0px;
-  transform: rotate(45deg);
-  transition: border-width 150ms ease-in-out;
+.arrow,
+.arrow:before {
+  position: absolute;
+  left: 50%;
 }
 
-.arrow:hover {
-  border-bottom-width: 3px;
-  border-right-width: 3px;
+.arrow {
+  cursor: pointer;
+  width: 40px;
+  height: 40px;
+  top: 50%;
+  margin: -20px 0 0 -20px;
+  -webkit-transform: rotate(45deg);
+  border-left: none;
+  border-top: none;
+  border-right: 2px #000 solid;
+  border-bottom: 2px #000 solid;
+  z-index: 10;
+}
+
+  
+.arrow:before{
+  content: '';
+  width: 20px;
+  height: 20px;
+  top: 50%;
+  margin: -10px 0 0 -10px;
+  border-left: none;
+  border-top: none;
+  border-right: 1px #000 solid;
+  border-bottom: 1px #000 solid;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  animation-name: arrow;
+}
+  
+@keyframes arrow {
+  0%{
+    opacity: 1;
+  }
+  100%{
+    opacity: 0;
+    transform: translate(-10px, -10px);
+  }
 }
 
 
@@ -65,18 +91,4 @@ textarea {
 .react-pdf__Page__svg {
   width: 100% !important;
   height: auto !important;
-}
-
-.pulse {
-  animation: pulse-animation 2s infinite;
-}
-
-@keyframes pulse-animation {
-  0% {
-    box-shadow: 0 0 0 0px rgba(0, 0, 0, 0.3);
-    
-  }
-  100% {
-    box-shadow: 0 0 0 10px rgba(0, 0, 0, 0.0);
-  }
 }
